Updated translations courtesy of Markus Fischer.

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -182,6 +182,7 @@ By Recent = "Nach Aktualität"
 By Region = "Nach Region"
 By Title = "Nach Titel"
 By Topic = "Nach Thema"
+cached_record_warning = "Dieser Datensatz ist im Suchindex nicht verfügbar. Es wird die letzte zwischengespeicherte Version angezeigt."
 Call Number = "Signatur"
 callnumber_abbrev = "Sig.:"
 Cannot find record = "Datensatz nicht gefunden"
@@ -245,6 +246,7 @@ collection_disambiguation = "Mehrere zutreffende Bestände gefunden"
 collection_empty = "Keine Inhalte anzuzeigen."
 collection_view_record = "Datensatz ansehen"
 Collections = "Bestände"
+combined_jump_links_intro = "Zu den Ergebnissen wechseln:"
 comment_anonymous_user = "Anonym"
 comment_error_load = "Fehler: Laden der Kommentareinträge fehlgeschlagen"
 comment_error_save = "Fehler: Speichern des Kommentars fehlgeschlagen"
@@ -310,6 +312,7 @@ date_year_placeholder = "J"
 Debug Information = "Debug Information"
 deep_paging_failure = "Die von Ihnen angeforderte Seite mit den Suchergebnissen ist derzeit nicht verfügbar; Sie wurden zu Seite %%page%% weitergeleitet."
 del_search = "Suchgruppe entfernen"
+del_search_num = "Suchgruppe %%num%% aufheben"
 Delete = "Löschen"
 delete_account_confirm = "Möchten Sie Ihr Konto wirklich löschen?"
 delete_account_description_html = "Gespeicherte Suchen und Favoritenlisten werden gelöscht. Sie können bei Bedarf später ein neues Konto eröffnen."
@@ -341,6 +344,7 @@ draw_searchbox_end = "Lassen Sie die Maus los um die Zeichnung abzuschliessen."
 draw_searchbox_start = "Klicken und ziehen um ein Rechteck zu zeichnen."
 Due = "Rückgabe bis"
 Due Date = "Rückgabedatum"
+dumb_captcha_prompt = "Bitte geben Sie den oben stehenden Text in umgekehrter Reihenfolge ein:"
 DVD = "DVD"
 eBook = "E-Book"
 Edit = "Bearbeiten"
@@ -395,6 +399,8 @@ empty_search_disallowed = "Eine leere Abfrage ist für das aktuelle Suchziel nic
 Enable Auto Config = "Autokonfiguration aktivieren"
 End Page = "Letzte Seite"
 eol_ellipsis = " …"
+epf_recommendations = "Publikations-Ergebnisse"
+epf_recommendations_more = "Mehr Publikations-Ergebnisse"
 ePub Full Text = "ePub Volltext"
 Era = "Ära"
 error_inconsistent_parameters = "Leider ist ein Fehler aufgetreten. Es wurden widersprüchliche Angaben entdeckt."
@@ -713,6 +719,11 @@ Last Name = "Nachname"
 Last Search Result = "Letzter Treffer"
 less = "weniger"
 less_ellipsis = "weniger …"
+libguides_profile_suggestion_heading = "Sprechen Sie mit einer Fachbibliothekarin"
+libguides_recommendations = "Suchanleitung-Ergebnisse"
+libguides_recommendations_more = "Mehr Suchanleitung-Ergebnisse"
+libguidesaz_recommendations = "Datenbank-Ergebnisse"
+libguidesaz_recommendations_more = "Mehr Datenbank-Ergebnisse"
 libphonenumber_invalid = "Ungültige Telefonnummer"
 libphonenumber_invalidcountry = "Ungültige Landesvorwahl"
 libphonenumber_invalidregion = "Ungültige Vorwahl:"
@@ -747,7 +758,12 @@ load_tag_error = "Fehler: Laden der Tags fehlgeschlagen"
 Loading = "Wird geladen"
 loading_ellipsis = "Wird geladen …"
 Loan History = "Bisherige Ausleihen"
+loan_history_all_purged = "Ihr Ausleihverlauf wurde gelöscht"
+loan_history_confirm_purge_all = "Möchten Sie alle Ausleihen aus Ihrem Ausleihverlauf löschen?"
+loan_history_confirm_purge_selected = "Möchten Sie die ausgewählten Ausleihen aus Ihrem Ausleihverlauf löschen?"
 loan_history_empty = "Sie haben keine bisherigen Ausleihen."
+loan_history_purge_all = "Verlauf löschen"
+loan_history_purge_selected = "Ausgewählte löschen"
 loan_history_selected_purged = "Die ausgewählten Ausleihen wurden von Ihrer Ausleihhistorie gelöscht."
 Local Login = "Lokale Anmeldung"
 local_login_desc = "Geben Sie Ihren Benutzernamen und Ihr Passwort für diese Webseite ein."
@@ -1031,6 +1047,10 @@ pronounced = "Aussprache"
 Provider = "Provider"
 proxied_user = "Anfrage für einen anderen Benutzer aufgeben"
 proxy_hold_place_success_html = 'Ihre delegierte Anfrage war erfolgreich. <a href="%%url%%">Ihre Ausleihen und Rückrufe</a>.'
+proxy_list_by = "Diese Benutzer sind Ihre Beauftragten:"
+proxy_list_description = "Die Beauftragten eines Benutzers haben die Erlaubnis, bestimmte Aktionen in dessen Namen durchzuführen."
+proxy_list_for = "Sie sind ein Beauftragter dieser Benutzer:"
+proxy_list_heading = "Beauftragte"
 Public = "Öffentlich"
 public_list_indicator = "Öffentlich"
 Publication = "Verlag"
@@ -1181,6 +1201,7 @@ search_OR = "Mit IRGENDEINEM der Wörter"
 search_save_success = "Suche erfolgreich abgespeichert."
 search_terms = "Suchbegriffe"
 search_unsave_success = "Gespeicherte Suche erfolgreich gelöscht."
+searchform_reset_button = "Suche löschen"
 seconds_abbrev = "s"
 see all = "Alle anzeigen"
 See also = "Siehe auch"
@@ -1323,6 +1344,7 @@ tag_delete_warning = "Achtung! Sie sind dabei %count% Datensatz-Tag(s) zu lösch
 tag_filter_empty = "Keine Tags gefunden für diesen Filter"
 Tags = "Tags"
 tags_deleted = "%count% Tag(s) gelöscht"
+temporary_search_tab_title = "Benutzerdefinierte Suche"
 test_fail = "Fehlgeschlagen"
 test_fix = "Reparieren"
 test_ok = "OK"
@@ -1412,6 +1434,7 @@ View Records = "Datensätze ansehen"
 View Retraction Notice = "Hinweis zur Rücknahme anzeigen"
 View this record in EBSCOhost = "Diesen Datensatz in EBSCOhost ansehen"
 view_already_selected = "%%current%% Ansicht bereits ausgewählt"
+view_in_opac = "Im OPAC anzeigen"
 visual_facet_parent = "Von"
 Volume = "Jahrgang"
 Volume Holdings = "Bandangaben"
