Add support for a description column in fines.
Includes driver support for Demo and SierraRest. SierraRest also removes some custom handling of types and adds optional mappings. Finnish and Swedish translations include a fix for duplicate column heading.

--- a/languages/bn.ini
+++ b/languages/bn.ini
@@ -502,6 +502,7 @@ find_more_ellipsis = "আরও অনুসন্ধান …"
 Finding Aid = "খোঁজার উপায়"
 Fine = "জরিমানা"
 Fine Date = "জরিমানা তারিখ"
+Fine Description = "বিবরন"
 fine_limit_patron = "আপনি আপনার জরিমানা সীমাতে পৌঁছেছেন এবং উপাদানটি পুনর্নবীকরণ করা যাবে না"
 Fines = "জরিমানা"
 First = "প্রথম"
