--- a/languages/ca.ini
+++ b/languages/ca.ini
@@ -512,6 +512,7 @@ find_more_ellipsis = "Trobar-ne més…"
 Finding Aid = "Buscant ajuda"
 Fine = "Sanció"
 Fine Date = "Data sanció"
+Fine Description = "Descripció"
 fine_limit_patron = "Heu arribat al límit de sancions i no podeu renovar ítems"
 Fines = "Sancions"
 First = "Primer"
