--- a/languages/cs.ini
+++ b/languages/cs.ini
@@ -499,6 +499,7 @@ find_more_ellipsis = "Objevte více…"
 Finding Aid = "Pomůcka pro vyhledávání"
 Fine = "Upomínka"
 Fine Date = "Datum vytvoření poplatku"
+Fine Description = "Popis"
 fine_limit_patron = "Dosáhli jste Vašeho limitu upomínek, Vaše výpůjčky proto nelze prodloužit."
 Fines = "Upomínky"
 First = "První"
