--- a/languages/cy.ini
+++ b/languages/cy.ini
@@ -437,6 +437,7 @@ find_more_ellipsis = "Canfod Mwy..."
 Finding Aid = "Cymorth Canfod"
 Fine = "Dirwy"
 Fine Date = "Dyddiad Dirwy"
+Fine Description = "Disgrifiad"
 fine_limit_patron = "Rydych chi wedi cyrraedd eich terfyn dirwyon ac ni allwch adnewyddu eitemau"
 Fines = "Dirwyon"
 First = "Cyntaf"
