--- a/languages/da.ini
+++ b/languages/da.ini
@@ -262,6 +262,7 @@ Find New Items = "Find nye værker”"
 find_more_ellipsis = "Find flere..."
 Finding Aid = "Hjælp til søgning"
 Fine = "Bøde"
+Fine Description = "Beskrivelse"
 fine_limit_patron = "Din bødegrænse er nået og emnerne kan derfor ikke fornyes"
 Fines = "Bøder"
 First Name = "Fornavn"
