--- a/languages/el.ini
+++ b/languages/el.ini
@@ -501,6 +501,7 @@ find_more_ellipsis = "Βρείτε περισσότερα…"
 Finding Aid = "Βοήθεια αναζήτησης"
 Fine = "Πρόστιμο"
 Fine Date = "Ημερομηνία Προστίμου"
+Fine Description = "Περιγραφή"
 fine_limit_patron = "Δεν μπορείτε να κάνεντε ανανέωση. Έχετε υπερβεί το όριο προστίμων"
 Fines = "Πρόστιμα"
 First = "Πρώτη"
