--- a/languages/en.ini
+++ b/languages/en.ini
@@ -500,6 +500,7 @@ find_more_ellipsis = "Find More…"
 Finding Aid = "Finding Aid"
 Fine = "Fine"
 Fine Date = "Fine Date"
+Fine Description = "Description"
 fine_limit_patron = "You have reached your fines limit and cannot renew items"
 Fines = "Fines"
 First = "First"
