--- a/languages/es.ini
+++ b/languages/es.ini
@@ -494,6 +494,7 @@ find_more_ellipsis = "Buscar Más…"
 Finding Aid = "Encontrar Ayuda"
 Fine = "Multa"
 Fine Date = "Fecha de Multa"
+Fine Description = "Descripción"
 fine_limit_patron = "Ha llegado al límite de multas, no puede renovar"
 Fines = "Multas"
 First = "Primero"
