--- a/languages/eu.ini
+++ b/languages/eu.ini
@@ -1027,6 +1027,7 @@ find_more_ellipsis = "Gehiago bilatu..."
 Finding Aid = "Laguntza eskatu"
 Fine = "Penalizazioak"
 Fine Date = "Fecha de multa"
+Fine Description = "Deskribapena"
 fine_limit_patron = "Ezin duzu gehiago berritu, mugara iritsi zara"
 Fines = "Multas"
 First = "Lehengoa"
