--- a/languages/fi.ini
+++ b/languages/fi.ini
@@ -497,8 +497,9 @@ Find = "Hae"
 Find New Items = "Uutuusluettelo"
 find_more_ellipsis = "Hae lisää…"
 Finding Aid = "Hakemisto"
-Fine = "Maksu"
-Fine Date = "Kirjauspäivämäärä"
+Fine = "Maksun tyyppi"
+Fine Date = "Kirjauspäivä"
+Fine Description = "Kuvaus"
 fine_limit_patron = "Lainojen uusiminen ei onnistu, koska maksamattomia maksuja on liikaa"
 Fines = "Maksut"
 First = "Ensimmäinen"
