--- a/languages/ga.ini
+++ b/languages/ga.ini
@@ -450,6 +450,7 @@ find_more_ellipsis = "Aimsigh tuilleadh…"
 Finding Aid = "Áis Aimsithe"
 Fine = "Fíneáil"
 Fine Date = "Dáta fíneála"
+Fine Description = "Cur síos"
 fine_limit_patron = "Tá an teorainn maidir le fíneálacha bainte amach agat agus ní féidir leat míreanna a athnuachan"
 Fines = "Fíneálacha"
 First = "Céad"
