--- a/languages/he.ini
+++ b/languages/he.ini
@@ -284,6 +284,7 @@ Find New Items = "מצא פריטים חדשים"
 find_more_ellipsis = "מצא עוד..."
 Finding Aid = "אמצעי חיפוש"
 Fine = "קנס"
+Fine Description = "תיאור"
 fine_limit_patron = "עקב ריבוי קנסות אין יכולת להאריך השאלות"
 Fines = "קנסות"
 First Name = "שם פרטי"
