--- a/languages/hy.ini
+++ b/languages/hy.ini
@@ -500,6 +500,7 @@ find_more_ellipsis = "Գտեք ավելին…"
 Finding Aid = "Որոնման օգնություն"
 Fine = "Տուգանք"
 Fine Date = "Տուգանքի ամսաթիվ"
+Fine Description = "Նկարագրություն"
 fine_limit_patron = "Դուք հասել եք ձեր տուգանքների սահմանաչափին և չեք կարող թարմացնել նյութերը"
 Fines = "Տուգանքներ"
 First = "Առաջին"
