--- a/languages/it.ini
+++ b/languages/it.ini
@@ -493,6 +493,7 @@ find_more_ellipsis = "Cerca..."
 Finding Aid = "Finding Aid"
 Fine = "Multa"
 Fine Date = "Data della sanzione"
+Fine Description = "Descrizione"
 fine_limit_patron = "Hai raggiunto il limite dei prestiti consentiti e non puoi rinnovare il prestito"
 Fines = "Multe"
 First = "Primo"
