--- a/languages/ja.ini
+++ b/languages/ja.ini
@@ -501,6 +501,7 @@ find_more_ellipsis = "その他の検索…"
 Finding Aid = "検索ツール"
 Fine = "延滞金"
 Fine Date = "延滞金発生日"
+Fine Description = "その他の書誌記述"
 fine_limit_patron = "延滞金限度額に達しました。資料の更新はできません。"
 Fines = "延滞金"
 First = "最初"
