--- a/languages/nl.ini
+++ b/languages/nl.ini
@@ -450,6 +450,7 @@ find_more_ellipsis = "Vind meer…"
 Finding Aid = "Zoek hulp"
 Fine = "Boete"
 Fine Date = "Datum boete"
+Fine Description = "Omschrijving"
 fine_limit_patron = "Je hebt jouw boete limieten overschreden en kunt geen items vernieuwen"
 Fines = "Boetes"
 First = "Eerst(e)"
