--- a/languages/pl.ini
+++ b/languages/pl.ini
@@ -511,6 +511,7 @@ find_more_ellipsis = "Dalsze opcje…"
 Finding Aid = "Pomoc"
 Fine = "Powód opłaty"
 Fine Date = "Data opłaty"
+Fine Description = "Opis"
 fine_limit_patron = "Osiągnąłeś limit opłat. Nie możesz przedłużyć terminu zwrotu tej książki."
 Fines = "Opłaty"
 First = "Pierwsza"
