--- a/languages/ru.ini
+++ b/languages/ru.ini
@@ -517,6 +517,7 @@ find_more_ellipsis = "Подробный просмотр..."
 Finding Aid = "Помощь для поиска"
 Fine = "Штраф"
 Fine Date = "Точная дата"
+Fine Description = "Описание"
 fine_limit_patron = "Достигнуто Ваше ограничение по штрафам и невозможно обновить документы"
 Fines = "Штрафы"
 First = "Первый"
