--- a/languages/se.ini
+++ b/languages/se.ini
@@ -444,6 +444,7 @@ find_more_ellipsis = "Viečča lasi…"
 Finding Aid = "Ohcu"
 Fine = "Máksu"
 Fine Date = "Girjenbeaivemearri"
+Fine Description = "Govvádus"
 fine_limit_patron = "Luoikkahemiid ođasteapmi ii lihkostuva, daningo mávssekeahtes mávssut leat liiggás"
 Fines = "Mávssut"
 First = "Vuosttaš"
