--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -497,8 +497,9 @@ Find = "Sök"
 Find New Items = "Nyhetskatalog"
 find_more_ellipsis = "Sök mera…"
 Finding Aid = "Sökhjälp"
-Fine = "Avgift"
+Fine = "Avgiftstyp"
 Fine Date = "Avstämningsdag"
+Fine Description = "Beskrivning"
 fine_limit_patron = "Lån kan inte förnyas p.g.a. mängden obetalda avgifter"
 Fines = "Avgifter"
 First = "Först"
