--- a/languages/tr.ini
+++ b/languages/tr.ini
@@ -554,6 +554,7 @@ find_more_ellipsis = "Diğer Aramalar…"
 Finding Aid = "Maaliyet"
 Fine = "Para Cezası"
 Fine Date = "Ceza Tarihi"
+Fine Description = "Diğer Bilgiler"
 fine_limit_patron = "Ceza limitiniz dolmuştur, kayıtları uzatamazsınız."
 Fines = "Cezalar"
 First = "İlk"
