--- a/languages/uk.ini
+++ b/languages/uk.ini
@@ -500,6 +500,7 @@ find_more_ellipsis = "Знайти більше..."
 Finding Aid = "Допомога до пошуку"
 Fine = "Пеня"
 Fine Date = "Дата пені"
+Fine Description = "Опис"
 fine_limit_patron = "Ваша пеня досягла граничного розміру. Ви не можете подовжити документи"
 Fines = "Пеня"
 First = "Перший"
