--- a/languages/zh-cn.ini
+++ b/languages/zh-cn.ini
@@ -381,6 +381,7 @@ Find New Items = "寻找新项目"
 find_more_ellipsis = "查找更多..."
 Finding Aid = "寻找援助"
 Fine = "罚款"
+Fine Description = "实物特征"
 fine_limit_patron = "您已经达到罚款限额，不能续借"
 Fines = "罚款"
 First Name = "名"
