--- a/languages/zh.ini
+++ b/languages/zh.ini
@@ -247,6 +247,7 @@ Find New Items = "尋找新項目"
 find_more_ellipsis = "查找更多..."
 Finding Aid = "尋找援助"
 Fine = "罰款"
+Fine Description = "實物特徵"
 fine_limit_patron = "您已經達到罰款限額，不能續借"
 Fines = "罰款"
 First Name = "名"
