--- a/languages/ar.ini
+++ b/languages/ar.ini
@@ -501,6 +501,7 @@ find_more_ellipsis = "ابحث عن المزيد…"
 Finding Aid = "ابحث عن Aid"
 Fine = "غرامة"
 Fine Date = "تاريخ الغرامة"
+Fine Description = "الوصف"
 fine_limit_patron = "لقد وصلت للحد الأقصى للغرامات ولا يمكن تجديد المواد"
 Fines = "الغرامات"
 First = "الأول"
