--- a/languages/de.ini
+++ b/languages/de.ini
@@ -500,6 +500,7 @@ find_more_ellipsis = "Weitere Suchoptionen …"
 Finding Aid = "Findmittel"
 Fine = "Gebührengrund"
 Fine Date = "Gebührenpflichtiges Verzugsdatum"
+Fine Description = "Beschreibung"
 fine_limit_patron = "Sie haben den Grenzwert für Mahnungen erreicht. Sie können keine Verlängerungen mehr vornehmen"
 Fines = "Gebühren"
 First = "Erste"
