--- a/languages/gl.ini
+++ b/languages/gl.ini
@@ -361,6 +361,7 @@ Find New Items = "Buscar Novos Exemplares"
 find_more_ellipsis = "Buscar Máis..."
 Finding Aid = "Atopar Axuda"
 Fine = "Multa"
+Fine Description = "Descripción"
 fine_limit_patron = "Chegou ao límite de multas, non pode renovar"
 Fines = "Multas"
 First = "Primeiro"
