--- a/languages/hi.ini
+++ b/languages/hi.ini
@@ -502,6 +502,7 @@ find_more_ellipsis = "और अधिक ढूंढें…"
 Finding Aid = "सहायता ढूँढना"
 Fine = "ठीक"
 Fine Date = "जुर्माने की तारीख"
+Fine Description = "विवरण"
 fine_limit_patron = "आप अपनी जुर्माना सीमा तक पहुँच चुके हैं और वस्तुओं का नवीनीकरण नहीं कर सकते हैं"
 Fines = "जुर्माना"
 First = "प्रथम"
