--- a/languages/pt-br.ini
+++ b/languages/pt-br.ini
@@ -500,6 +500,7 @@ find_more_ellipsis = "Encontrar Mais…"
 Finding Aid = "Obter ajuda"
 Fine = "Multa"
 Fine Date = "Data da multa"
+Fine Description = "Descrição"
 fine_limit_patron = "Não lhe é permitido renovar o empréstimo por ter atingido o limite de penalizações"
 Fines = "Multas"
 First = "Primeiro"
