--- a/languages/pt.ini
+++ b/languages/pt.ini
@@ -352,6 +352,7 @@ Find New Items = "Encontrar novos itens"
 find_more_ellipsis = "Encontrar Mais..."
 Finding Aid = "Obter ajuda"
 Fine = "Multa"
+Fine Description = "Descrição"
 fine_limit_patron = "Não lhe é permitido renovar o empréstimo por ter atingido o limite de penalizações"
 Fines = "Multas"
 First = "Primeiro"
