--- a/languages/sl.ini
+++ b/languages/sl.ini
@@ -306,6 +306,7 @@ Find New Items = "Poišči nove knjige/članke"
 find_more_ellipsis = "Poišči več..."
 Finding Aid = "Pomoč pri iskanju"
 Fine = "Zamudnina"
+Fine Description = "Opis"
 fine_limit_patron = "Ne morete podaljšati knjig, ker so vaši dolgovi dosegli limit"
 Fines = "Zamudnine"
 First = "Prvo"
