--- a/languages/vi.ini
+++ b/languages/vi.ini
@@ -449,6 +449,7 @@ find_more_ellipsis = "Tìm thêm…"
 Finding Aid = "Tìm viện trợ"
 Fine = "Tiền phạt"
 Fine Date = "Ngày đẹp trời"
+Fine Description = "Miêu tả"
 fine_limit_patron = "Bạn đã đạt đến giới hạn tiền phạt của mình và không thể gia hạn các mục"
 Fines = "Tiền phạt"
 First = "Đầu tiên"
