Translate sysMessage of renewals.

--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -1135,7 +1135,7 @@ renew_all = "Förnya alla lån"
 renew_determine_fail = "Ingen information om rätt att förnya. Kontakta kundtjänst."
 renew_empty_selection = "Inga valda lån"
 renew_error = "Dina lån kunde inte förnyas. Kontakta kundtjänst."
-renew_fail = "Lånet kunde inte förnyas."
+renew_fail = "Lånet kunde inte förnyas"
 renew_item = "Förnya lånet"
 renew_item_due = "Lånet förfaller inom ett dygn."
 renew_item_due_tooltip = "Lån förfaller snart"
