Fix also Russian and Ukrainian renew_fail translations.

--- a/languages/ru.ini
+++ b/languages/ru.ini
@@ -1153,7 +1153,7 @@ renew_all = "Обновить все документы"
 renew_determine_fail = "Невозможно определить, был ли обновлен Ваш документ. Обратитесь за помощью к библиотекарю."
 renew_empty_selection = "Не выбраны документы"
 renew_error = "Невозможно обновить Ваши документв- Обратитесь за помощью к библиотекрю."
-renew_fail = "Невозможно обновить Ваш документ."
+renew_fail = "Невозможно обновить Ваш документ"
 renew_item = "Обновить документ"
 renew_item_due = "Документ в течении следующих 24 часов"
 renew_item_due_tooltip = "Товары скоро должны быть готовы"
