--- a/languages/uk.ini
+++ b/languages/uk.ini
@@ -1136,7 +1136,7 @@ renew_all = "Подовжити все"
 renew_determine_fail = "Неможливо визначити чи був подовжений Ваш примірник. Зверніться за допомогою до бібліотекаря."
 renew_empty_selection = "Примірники не вибрані"
 renew_error = "Неможливо подовжити Ваші примірники. Зверніться за допомогою до бібліотекаря."
-renew_fail = "Цей примірник не може бути подовжений."
+renew_fail = "Цей примірник не може бути подовжений"
 renew_item = "Подовжити примірник"
 renew_item_due = "Термін видачі примірника закінчується в межах наступних 24 годин"
 renew_item_due_tooltip = "Термін видачі примірника закінчується"
