Finish Croatian translations for release 9.1

--- a/languages/hr.ini
+++ b/languages/hr.ini
@@ -204,7 +204,7 @@ catalog_login_desc = "Upiši svoje podatke za prijavu."
 CD = "CD"
 Change Email Address = "Promijeni e-mail adresu"
 Change Password = "Promijeni lozinku"
-change_email_disabled = "U ovom trenutku ne smiješ promijeniti e-mail adresu"
+change_email_disabled = "Trenutačno nemaš prava za mijenjanje e-mail adrese"
 change_email_verification_reminder = "Slanjem ovog obrasca, poslat će se e-mail na novu adresu; morat ćeš pritisnuti poveznicu u e-mailu kako bi promjena stupila na snagu."
 change_notification_email_message = "Upravo je postavljen zahtjev za mijenjanje tvoje e-mail adrese na %%library%%. Ako zahtjev nije tvoj, prijavi se na %%url%% i potvrdi integritet tvog računa. Ako imaš kakvih pitanja ili nedoumica, obrati se podršci na %%email%%."
 change_notification_email_subject = "Obavijest o promjeni e-mail adrese računa"
@@ -313,6 +313,7 @@ date_year_placeholder = "G"
 Debug Information = "Informacije o ispravljanju grešaka"
 deep_paging_failure = "Zatražena stranica rezultata pretrage trenutačno nije dostupna; preusmjeren/a si na stranicu %%page%%."
 del_search = "Ukloni pretragu grupa"
+del_search_num = "Ukloni grupu pretrage %%num%%"
 Delete = "Izbriši"
 delete_account_confirm = "Zaista želiš izbrisati svoj račun?"
 delete_account_description_html = "Spremljene pretrage i popisi favorita će se izbrisati. Ako želiš, novi račun možeš uspostaviti kasnije."
@@ -399,6 +400,8 @@ empty_search_disallowed = "Prazan upit nije dozvoljen sa ciljem pretrage"
 Enable Auto Config = "Aktiviraj automatsko konfiguriranje"
 End Page = "Zadnja stranica"
 eol_ellipsis = "…"
+epf_recommendations = "Rezultati izdanja"
+epf_recommendations_more = "Više rezultata izdanja"
 ePub Full Text = "Cijeli tekst e-publikacije"
 Era = "Era"
 error_inconsistent_parameters = "Oprosti, došlo je do greške. Ustanovljena je nedosljednost u parametrima."
@@ -522,7 +525,7 @@ Geographic Terms = "Geografski pojmovi"
 Geography = "Geografija"
 Get full text = "Preuzmi cijeli tekst"
 Get more information = "Preuzmi daljnje informacije"
-Get RSS Feed = "Preuzmi RSS sažetak"
+Get RSS Feed = "RSS vijesti"
 Globe = "Globus"
 Go = "Idi"
 Go to Standard View = "Idi na standardni prikaz"
@@ -717,6 +720,9 @@ Last Name = "Prezime"
 Last Search Result = "Zadnji rezultat pretrage"
 less = "manje"
 less_ellipsis = "manje…"
+libguides_profile_suggestion_heading = "Razgovaraj s knjižničarom"
+libguides_recommendations = "Rezultati vodiča istraživanja"
+libguides_recommendations_more = "Više rezultata vodiča istraživanja"
 libguidesaz_recommendations = "Rezultati baze podataka"
 libguidesaz_recommendations_more = "Daljnji rezultati baze podataka"
 libphonenumber_invalid = "Neispravan broj telefona"
@@ -815,7 +821,7 @@ My Profile = "Profil"
 Narrow Search = "Ograniči pretragu"
 navigate_back = "Natrag"
 nearby_items = "'Predmeti blizu „%%title%%”'"
-New Item Feed = "Poruka o novom predmetu"
+New Item Feed = "Vijesti o novom predmetu"
 New Item Search = "Pretraga novih predmeta"
 New Item Search Results = "Rezultati pretrage novih predmeta"
 New Items = "Novi predmeti"
@@ -1042,6 +1048,10 @@ pronounced = "izgovoreno"
 Provider = "Pružatelj usluge"
 proxied_user = "Postavi zahtjev za posrednika"
 proxy_hold_place_success_html = 'Tvoj posrednički zahtjev je uspio. <a href="%%url%%">Tvoje narudžbe i rezervacije</a>.'
+proxy_list_by = "Ovi korisnici su tvoji zastupnici:"
+proxy_list_description = "Zastupnici korisnika smiju samostalno obavljati neke radnje."
+proxy_list_for = "Zastupaš ove korisnike:"
+proxy_list_heading = "Zastupnici"
 Public = "Javno"
 public_list_indicator = "Javno"
 Publication = "Izdanje"
@@ -1101,7 +1111,7 @@ recovery_email_subject = "Obnavljanje VuFind računa"
 recovery_email_url_pretext = "Lozinku možeš ponovo postaviti na ovom URL-u: %%url%%"
 recovery_expired_hash = "Ova poveznica za obnavljanje je istekla"
 recovery_invalid_hash = "Poveznica za obnavljanje nije prepoznata"
-recovery_new_disabled = "U ovom trenutku ne smiješ promijeniti lozinku"
+recovery_new_disabled = "Trenutačno nemaš prava za mijenjanje lozinke"
 recovery_title = "Obnavljanje lozinke"
 recovery_too_soon = "Postavljeno je previše zahtjeva za obnavljanje, pokušaj kasnije ponovo"
 recovery_user_not_found = "Nismo pronašli tvoj račun"
@@ -1192,6 +1202,7 @@ search_OR = "BILO KOJI pojam"
 search_save_success = "Pretraga je uspješno spremljena."
 search_terms = "Traži pojmove"
 search_unsave_success = "Spremljena pretraga je uspješno uklonjena."
+searchform_reset_button = "Isprazni upit"
 seconds_abbrev = "s"
 see all = "pogledaj sve"
 See also = "Također pogledaj"
@@ -1200,6 +1211,7 @@ Select this record = "Odaberi ovaj zapis"
 Select your carrier = "Odaberi prenositelja"
 select_all_on_page = "Odaberi sve unose na stranici"
 select_item = "Odaberi predmet za daljnje radnje"
+select_item_checked_out_renew = "Odaberi predmet za obnavljanje"
 select_item_hold_cancel = "Odaberi predmete za otkazivanje narudžbi ili rezervacija"
 select_item_ill_request_cancel = "Odaberi predmet za otkazivanje zahtjeva za međuknjižničnu posudbu"
 select_item_purge = "Odaberi predmet za brisanje"
