Add support for a description column in fines. (#3171)
Includes driver support for Demo and SierraRest. SierraRest also removes some custom handling of types and adds optional mappings. Finnish and Swedish translations include a fix for duplicate column heading.

--- a/languages/hr.ini
+++ b/languages/hr.ini
@@ -501,6 +501,7 @@ find_more_ellipsis = "Pronađi više …"
 Finding Aid = "Pomoć za pronalaženje"
 Fine = "Zakasnina"
 Fine Date = "Datum zakasnine"
+Fine Description = "Opis"
 fine_limit_patron = "Dosegao/la si granicu zakasnina i ne možeš produljiti predmete"
 Fines = "Zakasnine"
 First = "Prvo"
