--- a/languages/fr.ini
+++ b/languages/fr.ini
@@ -495,6 +495,7 @@ find_more_ellipsis = "Autres modes de recherche…"
 Finding Aid = "Aide pour la recherche"
 Fine = "Amendes"
 Fine Date = "Date pour le paiement de l'amende"
+Fine Description = "Description"
 fine_limit_patron = "Vous avez atteint la limite des amendes et ne pouvez plus renouveler d'emprunt."
 Fines = "Amendes"
 First = "Premier"
