Remove obsolete select_page string. - Value is moved to select_all_on_page where more specific translations were not provided.

--- a/languages/da.ini
+++ b/languages/da.ini
@@ -563,7 +563,7 @@ see all = "se alt"
 See also = "Se også"
 see_all_ellipsis = "se alt..."
 Select your carrier = "Vælg medie"
-select_page = "Vælg side"
+select_all_on_page = "Vælg side"
 Send = "Send"
 Sensor Image = "Sensor Image"
 Serial = "Serial"
