--- a/languages/it.ini
+++ b/languages/it.ini
@@ -1198,7 +1198,7 @@ See also = "Vedi anche"
 see_all_ellipsis = "vedi tutto..."
 Select this record = "Seleziona questo record"
 Select your carrier = "Seleziona il tuo supporto"
-select_page = "Seleziona la pagina"
+select_all_on_page = "Seleziona la pagina"
 select_pickup_location = "Scegli un punto di prelievo"
 select_request_group = "Scegli un gruppo di richiesta"
 Selected = "Selezionato"
