--- a/languages/pt.ini
+++ b/languages/pt.ini
@@ -808,7 +808,7 @@ See also = "Ver também"
 see_all_ellipsis = "Ver todos..."
 Select this record = "Selecione este registro"
 Select your carrier = "Seleccione a sua operadora"
-select_page = "Seleccionar todos"
+select_all_on_page = "Seleccionar todos"
 select_pickup_location = "Selecione o Local de Levantamento"
 select_request_group = "Selecione Grupo do Pedido"
 Selected = "Selecionado"
