--- a/languages/zh-cn.ini
+++ b/languages/zh-cn.ini
@@ -681,7 +681,7 @@ see all = "查看所有"
 See also = "另见"
 see_all_ellipsis = "查看所有..."
 Select your carrier = "选择运营商"
-select_page = "选择页"
+select_all_on_page = "选择页"
 Send = "发送"
 Sensor Image = "传感器图像"
 Serial = "序列"
