--- a/languages/zh.ini
+++ b/languages/zh.ini
@@ -547,7 +547,7 @@ see all = "查看所有"
 See also = "另見"
 see_all_ellipsis = "查看所有..."
 Select your carrier = "選擇運營商"
-select_page = "選擇頁"
+select_all_on_page = "選擇頁"
 Send = "發送"
 Sensor Image = "傳感器圖像"
 Serial = "序列"
