--- a/languages/es.ini
+++ b/languages/es.ini
@@ -1185,7 +1185,7 @@ See also = "Ver también"
 see_all_ellipsis = "ver todos…"
 Select this record = "Seleccione este registro"
 Select your carrier = "Seleccione su compañía"
-select_page = "Seleccione página"
+select_all_on_page = "Seleccione página"
 select_pickup_location = "Seleccionar ubicación dónde recoger"
 select_request_group = "Seleccionar Grupo de Solicitud"
 Selected = "Seleccionado"
