--- a/languages/eu.ini
+++ b/languages/eu.ini
@@ -1551,7 +1551,7 @@ See also = "Ikus ere"
 see_all_ellipsis = "Guztiak ikusi..."
 Select this record = "Aukeratu erregistro hau"
 Select your carrier = "Aukera ezazu zure hornitzailea"
-select_page = "Orrialdea aukeratu"
+select_all_on_page = "Orrialdea aukeratu"
 select_pickup_location = "Aukeratu jasotzeko kokapena"
 select_request_group = "Aukeratu eskatze taldea"
 Selected = "Aukeratuta"
