--- a/languages/fr.ini
+++ b/languages/fr.ini
@@ -1190,7 +1190,7 @@ See also = "Voir aussi"
 see_all_ellipsis = "voir tous les …"
 Select this record = "Sélectionner cette notice"
 Select your carrier = "Choisissez votre fournisseur de téléphonie"
-select_page = "Choisir une page"
+select_all_on_page = "Choisir une page"
 select_pickup_location = "Choisir le lieu de retrait"
 select_request_group = "Sélectionner le groupe de demandes"
 Selected = "Sélectionné"
