--- a/languages/vi.ini
+++ b/languages/vi.ini
@@ -1096,7 +1096,7 @@ See also = "Xem thêm"
 see_all_ellipsis = "Xem tất cả…"
 Select this record = "Chọn bản ghi này"
 Select your carrier = "Chọn nhà cung cấp dịch vụ của bạn"
-select_page = "Chọn trang"
+select_all_on_page = "Chọn trang"
 select_pickup_location = "Chọn địa điểm tìm kiếm"
 select_request_group = "Chọn nhóm yêu cầu"
 Selected = "Đã chọn"
