Updated Italian translations from Rodolfo Marraffa.

--- a/languages/it.ini
+++ b/languages/it.ini
@@ -1215,6 +1215,7 @@ select_item_ill_request_cancel = "Selezionare l'elemento per annullare le richie
 select_item_purge = "Selezionare l'elemento da eliminare"
 select_item_storage_retrieval_request_cancel = "Selezionare l'elemento per annullare le richieste di prelievo dal magazzino"
 select_page = "Seleziona la pagina"
+select_page_cart = "Selezionare tutti gli oggetti nel carrello"
 select_pickup_location = "Scegli un punto di prelievo"
 select_request_group = "Scegli un gruppo di richiesta"
 Selected = "Selezionato"
