--- a/languages/it.ini
+++ b/languages/it.ini
@@ -246,6 +246,7 @@ collection_disambiguation = "Trovate più collezioni corrispondenti ai criteri d
 collection_empty = "Non ci sono elementi da mostrare."
 collection_view_record = "Vedi il record"
 Collections = "Collezioni"
+combined_jump_links_intro = "Vai ai Risultati:"
 comment_anonymous_user = "Anonimo"
 comment_error_load = "Errore: lista commenti non accessibile"
 comment_error_save = "Errore: commento non salvato"
