Add another missing Northern Sami translation.

--- a/languages/se.ini
+++ b/languages/se.ini
@@ -975,6 +975,7 @@ query time = "ohcanáigi"
 random_recommendation_title = "Deivvolaš bohtosat ohcanbohtosiid joavkkus"
 Range = "Áigegaska"
 Range slider = "Gaskka mudden"
+rating_add_or_update = "Lasit dahje beaivát árvvoštallama"
 Read the full review online... = "Loga árvvoštallama ollislažžan…"
 Recall This = "Daga várrema"
 recently_returned_channel_title = "Gieskat máhcahuvvon"
