Added string courtesy of Anneke Goovaerts.

--- a/languages/nl.ini
+++ b/languages/nl.ini
@@ -1099,6 +1099,7 @@ See also = "Zie ook"
 see_all_ellipsis = "Bekijk alles…"
 Select this record = "Selecteer dit record"
 Select your carrier = "Kies jouw drager"
+select_all_on_page = "Selecteer alle gegevens op de pagina"
 select_page = "Kies pagina"
 select_pickup_location = "Selecteer afhaalpunt"
 select_request_group = "Selecteer een Aanvraag Groep"
