Remove obsolete select_page string. (#3178)
- Value is moved to select_all_on_page where more specific translations were not provided.

--- a/languages/se.ini
+++ b/languages/se.ini
@@ -1086,7 +1086,7 @@ see all = "čájet visot"
 See also = "Geahča maid"
 Select this record = "Vállje dán merkoša"
 Select your carrier = "Vállje operáhtora"
-select_page = "Vállje siiddu"
+select_all_on_page = "Vállje siiddu"
 select_pickup_location = "Vállje viežžanbáikki"
 select_request_group = "Vállje várrenjoavkku"
 Selected = "Válljejuvvon"
