--- a/languages/en.ini
+++ b/languages/en.ini
@@ -301,6 +301,8 @@ Created = "Created"
 csrf_validation_failed = "The request could not be processed. Please try again."
 Data Set = "Data Set"
 Database = "Database"
+databases = "Search Relevant Databases"
+databases_intro = "Search directly in databases for enhanced functionality."
 Date = "Date"
 Date of birth = "Date of birth"
 Date of death = "Date of death"
@@ -356,8 +358,6 @@ edit_list_fail = "Sorry, you are not permitted to edit this list"
 edit_list_success = "List successfully updated."
 Edition = "Edition"
 EDS Results = "EDS Results"
-eds_databases = "Search Relevant Databases"
-eds_databases_intro = "Search directly in databases for enhanced functionality."
 eds_expander_fulltext = "Also search within the full text of the articles"
 eds_expander_relatedsubjects = "Apply equivalent subjects"
 eds_expander_thesaurus = "Apply related words"
