--- a/languages/en.ini
+++ b/languages/en.ini
@@ -159,7 +159,6 @@ browse_lcc = "Call Number (LC)"
 browse_publishDate = "Year of Publication"
 browse_title = "Title"
 browse_topic = "Topic"
-Browser = "Browser"
 bulk_email_success = "Your item(s) were emailed"
 bulk_email_title = "Library Catalog Items"
 bulk_error_missing = "Some data was missing. Your request was not successful."
@@ -1025,7 +1024,6 @@ pick_up_location = "Pickup Location"
 Place a Hold = "Place a Hold"
 Place of birth = "Place of birth"
 Place of death = "Place of death"
-Platform = "Platform"
 Playing Time = "Playing Time"
 Please check back soon = "Please check back soon"
 Please contact the Library Reference Department for assistance = "Please contact the Library Reference Department for assistance"
@@ -1174,6 +1172,8 @@ Save = "Save"
 Save Comment = "Save Comment"
 save_search = "Save Search"
 save_search_remove = "Remove Saved Search"
+saved_login_actions = "Actions"
+saved_login_platform_and_browser = "Platform / Browser"
 Saved in = "Saved in"
 Saved Logins = "Saved Logins"
 schedule_daily = "Daily"
