--- a/languages/ExplainFieldName/de.ini
+++ b/languages/ExplainFieldName/de.ini
@@ -1,4 +1,4 @@
 ;description of fields in explain
-allfields_unstemmed = "Alle Felder"
-fulltext_unstemmed = "Volltext"
+allfields_unstemmed = 'Kopiert aus "Alle Felder"'
+fulltext_unstemmed = 'Kopiert von "Volltext"'
 title_alt = "alternativer Titel"
