--- a/languages/en.ini
+++ b/languages/en.ini
@@ -334,6 +334,7 @@ Description = "Description"
 Desired Username = "Desired Username"
 Detailed View = "Detailed View"
 Details = "Staff View"
+Difference to top result relevance = "Difference to top result relevance"
 Displaying the top = "Displaying the top"
 Document Inspector = "Document Inspector"
 Document Type = "Document Type"
@@ -418,6 +419,7 @@ explain_modified_value = "Product of %%relevanceValue%% (relevance value)"
 explain_modifier = "with a modifier of %%modifier%%"
 explain_relevance = "Record Id: %%recordId%% found with a relevance value of %%relevanceValue%%"
 explain_sum = "sum"
+Explanation for search = "Explanation for search"
 Export = "Export"
 Export Favorites = "Export Items"
 Export Items = "Export Items"
@@ -1139,6 +1141,7 @@ relais_success_message = "Request id #%%id%% was created. You will receive a con
 Related Author = "Related Author"
 Related Items = "Related Items"
 Related Subjects = "Related Subjects"
+Relevance = "Relevance"
 Remove filter = "Remove Filter"
 Remove Filters = "Remove Filters"
 Remove from Book Bag = "Remove from Book Bag"
@@ -1381,6 +1384,7 @@ Too Many Email Recipients = "Too Many Email Recipients"
 too_many_favorites = "This list is too large to display all at once. Try rearranging your saved items into more lists or limiting using tags."
 too_many_new_items = "There are too many new items to display in a single list. Try limiting your search."
 too_many_reserves = "There are too many course reserves to display in a single list. Try limiting your search."
+Top Result Relevance = "Top Result Relevance"
 top_facet_label = "%%label%% within your search."
 Topic = "Topic"
 Topics = "Topics"
