Add a Forget All button

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -508,6 +508,7 @@ footer_header_find_more = "Find More"
 footer_header_need_help = "Need Help?"
 footer_header_search_options = "Search Options"
 for search = "for search"
+Forget All = "Forget All"
 Forget Login = "Forget Login"
 Forgot Password = "Forgot Password"
 Form name = "Form name"
