--- a/languages/en.ini
+++ b/languages/en.ini
@@ -301,6 +301,8 @@ Created = "Created"
 csrf_validation_failed = "The request could not be processed. Please try again."
 Data Set = "Data Set"
 Database = "Database"
+databases = "Search Relevant Databases"
+databases_intro = "Search directly in databases for enhanced functionality."
 Date = "Date"
 Date of birth = "Date of birth"
 Date of death = "Date of death"
