--- a/languages/IndexFieldDescription/de.ini
+++ b/languages/IndexFieldDescription/de.ini
@@ -2,3 +2,4 @@
 allfields_unstemmed = 'Kopiert aus "Alle Felder"'
 fulltext_unstemmed = 'Kopiert von "Volltext"'
 title_alt = "alternativer Titel"
+unknown = "Feldname unbekannt"
