--- a/languages/IndexFieldDescription/en.ini
+++ b/languages/IndexFieldDescription/en.ini
@@ -2,3 +2,4 @@
 allfields_unstemmed = "copyFielded from allfields"
 fulltext_unstemmed = "copyFielded from fulltext"
 title_alt = "alternate title(s)"
+unknown = "field name is unknown"
