--- a/languages/native.ini
+++ b/languages/native.ini
@@ -22,6 +22,7 @@ Hindi = "हिंदी"
 Irish = "Gaeilge"
 Italian = "Italiano"
 Japanese = "日本語"
+Mongolian = "Монгол хэл"
 Northern Sámi = "Sámegiella"
 Polish = "polski"
 Portuguese = "Português"
