changed explain link and added translations

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -414,10 +414,15 @@ explain_boost = " * %%boost%% (Boost)"
 explain_boost_description = "(Boost) = %%boost_description%%"
 explain_compared = "Relevanz im Vergleich zu der Trefferrelevanz des Top Treffers"
 explain_coord = " * %%coord%% (Ausgleich von Anzahl der Treffer im Vergleich zur Suche)"
+explain_difference_score = "Differenz zum Topscore"
 explain_disabled = "Explain ist für %%searchClassId%% deaktiviert"
 explain_modified_value = "Produkt von %%relevanceValue%% (Relevanzwert)"
 explain_modifier = "mit dem Modifier: %%modifier%%"
+explain_record_score = "Titlescore"
 explain_relevance = "Record Id: %%recordId%% gefunden mit einem Relevanzwert von %%relevanceValue%%"
+explain_relevance_score = "Relevanzscore"
+explain_result_list_chart_title = "Score: %%score%%"
+explain_result_list_hint = "Relevanzscore. Klicke für eine detailliertere Erklärung."
 explain_sum = "Summe"
 Explanation for search = "Explain für Suche"
 Export = "Export"
