--- a/languages/en.ini
+++ b/languages/en.ini
@@ -416,10 +416,15 @@ explain_boost = " * %%boost%% (boost)"
 explain_boost_description = "(boost) = %%boost_description%%"
 explain_compared = "Relevance in comparison to the relevance of the top result"
 explain_coord = " * %%coord%% (adjust for number of matches compared to search)"
+explain_difference_score = "difference to top score"
 explain_disabled = "Explain is deactivated for %%searchClassId%%"
 explain_modified_value = "Product of %%relevanceValue%% (relevance value)"
 explain_modifier = "with a modifier of %%modifier%%"
+explain_record_score = "record score"
 explain_relevance = "Record Id: %%recordId%% found with a relevance value of %%relevanceValue%%"
+explain_relevance_score = "Relevance Score"
+explain_result_list_chart_title = "Score: %%score%%"
+explain_result_list_hint = "Relevance score. Click to see detailed explanation."
 explain_sum = "sum"
 Explanation for search = "Explanation for search"
 Export = "Export"
