--- a/languages/en.ini
+++ b/languages/en.ini
@@ -142,6 +142,9 @@ Bookmark = "Bookmark"
 bookplate_label = "%%title%% bookplate"
 Books = "Books"
 Borrowing Location = "Borrowing Location"
+bound_with_heading_multiple_callnumbers = "Contents of [%%callnumber%%]"
+bound_with_heading_one_callnumber = "Contents"
+bound_with_intro = "The following works are all found in the book indicated by the call number above."
 Braille = "Braille"
 Breadcrumbs = "Breadcrumbs"
 Brief View = "Brief View"
