--- a/languages/de.ini
+++ b/languages/de.ini
@@ -1351,6 +1351,7 @@ switchquery_truncatechar = "Verkürzen Sie Ihren Suchbegriff um mehr Treffer zu 
 switchquery_unwantedbools = "Die Wörter AND, OR und NOT beeinflussen die Suchergebnisse; versuchen Sie es mit Anführungszeichen"
 switchquery_unwantedquotes = "Eine Suche ohne Anführungszeichen kann mehr Ergebnisse liefern"
 switchquery_wildcard = "Verwenden Sie das Zeichen für die Wildcard um Wortvarianten zu berücksichtigen"
+Synonym = "Synonym"
 System Unavailable = "System nicht verfügbar"
 Table of Contents = "Inhaltsangabe"
 Table of Contents unavailable = "Keine Inhaltsangabe verfügbar"
