--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1356,6 +1356,7 @@ switchquery_truncatechar = "Shorten your search query to broaden your results"
 switchquery_unwantedbools = "The words AND, OR and NOT may confuse the search; try adding quotes"
 switchquery_unwantedquotes = "Removing quotes may allow a broader search"
 switchquery_wildcard = "Adding a wildcard symbol may retrieve word variants"
+Synonym = "Synonym"
 System Unavailable = "System Unavailable"
 Table of Contents = "Table of Contents"
 Table of Contents unavailable = "Table of Contents unavailable"
