--- a/languages/de.ini
+++ b/languages/de.ini
@@ -164,6 +164,7 @@ bulk_email_title = "Referenzen aus dem Bibliothekskatalog"
 bulk_error_missing = "Fehlende Angaben. Ihre Anfrage ist fehlgeschlagen."
 bulk_export_not_supported = "Die markierten Einträge können nicht für Massenexporte verwendet werden."
 bulk_fail = "Leider ist ein Fehler aufgetreten. Versuchen Sie es später noch einmal."
+bulk_limit_exceeded = "Die Auswahl von %%count%% Einträgen überschreitet den Grenzwert von %%limit%% für diese Aktion. Bitte wählen Sie weniger Einträge aus."
 bulk_noitems_advice = "Es wurde nichts ausgewählt. Klicken Sie bitte in eine Auswahlbox neben einem Eintrag und versuchen Sie es erneut."
 bulk_save_error = "Fehlende Angaben. Ihre Auswahl wurde nicht gespeichert."
 bulk_save_success = "Ihre Auswahl wurde erfolgreich abgespeichert"
