--- a/languages/en.ini
+++ b/languages/en.ini
@@ -164,6 +164,7 @@ bulk_email_title = "Library Catalog Items"
 bulk_error_missing = "Some data was missing. Your request was not successful."
 bulk_export_not_supported = "The record(s) you have selected do not support bulk export."
 bulk_fail = "Sorry, an error has occurred. Please try again."
+bulk_limit_exceeded = "Selection of %%count%% items exceeds the limit of %%limit%% for this action. Please select less items."
 bulk_noitems_advice = "No items were selected. Please click on a checkbox next to an item and try again."
 bulk_save_error = "Some data was missing. Your items were not saved."
 bulk_save_success = "Your item(s) were saved successfully"
